# Gryphon

./: .gitignore  CMakeLists.txt
docs/: ALU.md  Assembly.md  CPU Diagram.md  Control Lines.md  Echo Test.md  Input Output.md  Registers.md  Vectors.md
docs/Instructions/: Instruction Cycles.md  Instruction Formats.md  Opcodes.md
include/: ALU.h  CPU.h
src/: ALU.cpp  CPU.cpp  Gryphon.cpp
